--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="row justify-content-end">
-            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#newProductModal">New Product</button>
+            <button type="button" class="btn btn-default" title="Create a New Product" data-toggle="modal" data-target="#newProductModal">New Product</button>
         </div>
     
         <app-search-products></app-search-products>
